--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -34,7 +34,7 @@ jobs:
       id-token: write # for creating OIDC tokens for signing.
       packages: write # for uploading attestations.
       contents: read # To read the repo.
-    uses: msuozzo/slsa-workshop-org/.github/workflows/image-publisher.yml@main
+    uses: github.com/msuozzo/slsa-workshop-org/.github/workflows/image-publisher.yml@main
     with:
       environment: ${{ inputs.environment }}
       image: ${{ inputs.image }}
